<!-- Copyright (c) 2022 NetEase, Inc. All rights reserved. -->
<!-- Use of this source code is governed by a MIT license that can be -->
<!-- found in the LICENSE file. -->

<resources>
    <string name="app_name">VideoCall</string>
    <string name="one_on_one_video_call">1V1视频通话</string>
    <string name="converged_call">融合呼叫语音通话</string>
    <string name="group_call">多人音视频通话</string>
    <string name="login_btn_login">登录</string>
    <string name="login_phone_number_cant_less_than_eleven">手机号不能少于11位</string>
    <string name="login_account_id_cant_null">账号ID不能为空</string>
    <string name="login_token_cant_null">Token不能为空</string>
    <string name="login_help_link">如何获取云信账号与Token</string>
    <string name="login_sms_code_has_been_sent">验证码已经发送至 +86-</string>
    <string name="login_please_input_sms_code">，请在下方输入验证码</string>
    <string name="login_please_input_correct_sms_code">请输入正确的验证码</string>
    <string name="sixty_second">60s</string>
    <string name="login_resend">重新发送</string>
    <string name="login_second">s</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_sms_code_send_success">验证码重新发送成功</string>
    <string name="login_sms_code_send_fail">验证码重新发送失败</string>
    <string name="kickoff_tips">该账户被踢下线</string>
    <string name="nertc_cant_find_this_user">未找到此用户</string>
    <string name="nertc_no_network">网络未连接</string>
    <string name="nertc_other_cancel">对方已取消</string>
    <string name="nertc_other_refused">对方已拒绝</string>
    <string name="nertc_other_line_busy">对方占线</string>
    <string name="nertc_call_is_answer_on_other_device">通话已在其它设备接听</string>
    <string name="call">呼叫</string>
    <string name="add">添加</string>
    <string name="remove">取消</string>
    <string name="connection">连线中</string>
    <string name="user_to_be_called">待呼叫用户</string>
    <string name="user_count_is_to_limit">邀请已达上线</string>
    <string name="user_to_group_call_with_user_count">发起呼叫（%1$d/%2$d）</string>
    <string name="user_join_group_call_with_user_count">还有%d人参与通话</string>
    <string name="empty">无</string>
    <string name="your_phone_number_is">您的手机号：%s</string>
    <string name="recently_search">最近搜索</string>
    <string name="call_record">通话记录</string>
    <string name="search_result">搜索结果</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="start_call">发起呼叫</string>
    <string name="title_setting">设置</string>
    <string name="please_input_the_number_have_register">输入手机号搜索已注册用户</string>
    <string name="search">搜索</string>
    <string name="call_type">呼叫类型</string>
    <string name="audio_call">音频呼叫</string>
    <string name="video_call">视频呼叫</string>
    <string name="please_input_account_id">请输入账号ID</string>
    <string name="current_user_login_problem">当前用户登录存在问题，请退出账号后重新登录</string>
    <string name="cannot_call_yourself">不能呼叫自己！</string>
    <string name="calling_in_progress">正在通话中</string>
    <string name="id_copied_to_clipboard">已复制ID到剪切板</string>
    <string name="please_select_users_to_call">请选择待呼叫用户</string>
    <string name="already_connected">已经在连线中</string>
    <string name="network_connect_error_please_try_again">网络异常，请稍后再试</string>
    <string name="your_id">您的ID：%s</string>
    <string name="your_nick">您的昵称：%s</string>
    <string name="call_button">呼叫</string>
    <string name="apply_floating_window_permission">申请浮窗权限</string>
    <string name="current_battery_optimization_status">当前电池优化权限状态:</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="version">版本</string>
    <string name="app_description">本APP仅用于展示网易云信实时音视频各类功能</string>
    <string name="start_dump_button">开始dump，建议3分钟后点结束dump按钮</string>
    <string name="end_dump_button">结束dump，请到/sdcard/Android/data/com.netease.videocall.demo/files/dump目录查看dump文件</string>
    <string name="start_dump_audio">开始dump音频</string>
    <string name="dump_finished">dump已结束，请到/sdcard/Android/data/com.netease.videocall.demo/files/dump目录查看dump文件</string>
    <string name="upload_success">上传成功</string>
    <string name="settings_success">设置成功</string>
    <string name="settings_failed">设置失败</string>
    <string name="logout_account">退出账号:%s</string>
    <string name="confirm_logout">是否退出当前账号？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="logged_out">已经退出登录</string>
    <string name="welcome_login">你好，欢迎登录</string>
    <string name="account_id_label">账号ID</string>
    <string name="token_label">Token</string>
    <string name="please_input_token">请输入Token</string>
    <string name="login_button">登录</string>
    <string name="restart_tip">当前设置需要重启应用生效！</string>
    <string name="rtc_timeout_tip">设置RTC呼叫超时时间（秒）：\n 融合呼叫场景下为转换时间</string>
    <string name="enable_join_rtc_when_call">开启呼叫时加入Rtc ：</string>
    <string name="enable_auto_join_channel">开启自动加入信令通道 ：</string>
    <string name="enable_foreground_service">是否开启通话前台服务 ：</string>
    <string name="global_extra_copy">全局抄送参数 ：</string>
    <string name="custom_channel_name">自定义channelName：</string>
    <string name="please_input_multiple_account_ids">请输入多个账号ID，用逗号分隔</string>
    <string name="users_to_be_called">待呼叫用户</string>
    <string name="start_group_call">发起群组通话</string>
    <string name="start_group_call_with_count">发起群组通话 (%d人)</string>
    <string name="ains_noise_reduction_mode">AI降噪模式：</string>
    <string name="ains_mode_off">关闭</string>
    <string name="ains_mode_normal">正常模式</string>
    <string name="ains_mode_enhance">加强模式</string>
</resources>