<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2022 NetEase, Inc. All rights reserved. -->
<!-- Use of this source code is governed by a MIT license that can be -->
<!-- found in the LICENSE file. -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorActivityBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="#FF222222"
        android:textSize="28sp"
        android:text="@string/welcome_login" />

    <TextView
        android:id="@+id/tv_help_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="#FF007AFF"
        android:textSize="14sp"
        android:text="@string/login_help_link"
        android:clickable="true"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/lly_account_id"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_help_link"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF333333"
            android:textSize="15sp"
            android:text="@string/account_id_label" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="#FFDCDFE5" />

        <EditText
            android:id="@+id/edt_account_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="#FF333333"
            android:textSize="15sp"
            android:hint="@string/please_input_account_id"
            android:textColorHint="#FFB0B6BE"
            android:background="@null" />
    </LinearLayout>

    <View
        android:id="@+id/divider_view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFDCDFE5"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lly_account_id" />

    <LinearLayout
        android:id="@+id/lly_token"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/divider_view1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF333333"
            android:textSize="15sp"
            android:text="@string/token_label" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="#FFDCDFE5" />

        <EditText
            android:id="@+id/edt_token"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="#FF333333"
            android:textSize="15sp"
            android:hint="@string/please_input_token"
            android:textColorHint="#FFB0B6BE"
            android:background="@null" />
    </LinearLayout>

    <View
        android:id="@+id/divider_view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFDCDFE5"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lly_token" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_view2"
        android:background="@drawable/login_button_border"
        android:text="@string/login_button"
        android:textColor="@drawable/login_button_text_selector"
        android:enabled="true"
        android:textSize="14sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/tv_declare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
